fix: vertical space of exhibition block on small screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -422,7 +422,7 @@ button {
   }
 
   .exhibition-block {
-    min-height: 520px;
+    min-height: 420px;
     margin-bottom: 120px;
   }
 
